2007-04-07  Nate Nielsen  <nielsen@memberwebs.com>

    * configure.in: Bump version number

=== seahorse-1.0.1 ===

2007-04-07  Nate Nielsen  <nielsen@memberwebs.com>

    * INSTALL:
    * NEWS:
    * README: Seahorse version 1.0.1

2007-04-07  Nate Nielsen  <nielsen@memberwebs.com>

    * libseahorse/seahorse-ssh-key-data.c: 
    * libseahorse/seahorse-util.c:
    * plugins/nautilus/seahorse.xml: Enable importing of plain SSH
    keys, generated elsewhere. Fixes bug #424473
    
2007-04-06  Nate Nielsen  <nielsen@memberwebs.com>

    * libseahorse/seahorse-widget.c: Make 'Keyserver Results' window help
    work properly. Patch from Adam Schreiber. Fixes bug #421615
    
2007-04-06  Nate Nielsen  <nielsen@memberwebs.com>

    * libseahorse/seahorse-ldap-source.c: Make progress bar pulse 
    properly during an LDAP search. Fixes bug #355850
    
2007-04-06  Nate Nielsen  <nielsen@memberwebs.com>

    * libseahorse/seahorse-ldap-source.c: 
    * src/seahorse-keyserver-results.c: Handle spaces properly in LDAP 
    search filters. 
    
2007-04-06  Nate Nielsen  <nielsen@memberwebs.com>

    * libseahorse/seahorse-ssh-key-data.c: Don't add extra lines to 
    .ssh/authorized_keys when moving keys around. Fixes bug #352929
    
2007-04-03  Nate Nielsen  <nielsen@memberwebs.com>

    * src/seahorse-key-manager.c: Fix crasher when deleting more than one 
    private keys. Fixes bug #417901
    
2007-04-03  Nate Nielsen  <nielsen@memberwebs.com>

    * src/seahorse-pgp-private-key-properties.glade: Show expired date properly
    in warning message for private keys.
    
2007-03-27  Adam Schreiber <sadam@clemson.edu>
    
    * src/seahorse-key-manager.c: Fix il8n of the about dialog.
    Patch from Bjoern Voigt.  Fixes bug #423082
    
2007-03-22  Nate Nielsen  <nielsen@memberwebs.com>

    * configure.in: 
    * INSTALL: Require GTK+ version 2.10

2007-03-19  Nate Nielsen  <nielsen@memberwebs.com>

    * libseahorse/seahorse-ssh-operation.c: