@@ -1,5 +1,10 @@
 2007-04-07  Nate Nielsen  <nielsen@memberwebs.com>
 
+    * agent/Makefile.am: Set proper binary as setuid. 
+    Fixes bug #427586
+    
+2007-04-07  Nate Nielsen  <nielsen@memberwebs.com>
+
     * configure.in: Bump version number
 
 === seahorse-1.0.1 ===
